<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/settingsicon"
        android:contentDescription="@string/settings_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/homeIcon"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/homeicon"
        android:contentDescription="@string/home_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_page"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <ImageView
        android:id="@+id/checkmarkIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tasks_button"
        android:src="@drawable/checkicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_schedule"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <Button
        android:id="@+id/add_event_name"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6F5324"
        android:layout_marginTop="30dp"
        android:text="@string/event_name"
        app:layout_constraintTop_toBottomOf="@id/enter_schedule" />

    <Button
        android:id="@+id/add_event_time"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#6F5324"
        android:text="@string/event_time"
        app:layout_constraintTop_toBottomOf="@id/add_event_name" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#6F5324"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>